# lang_learn_tools

./: README.md
flashcards/: Cargo.toml
flashcards/src/: main.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
srs/: .gitignore  Cargo.toml  package.json
srs/src/: App.tsx  Spinner.tsx  main.rs  output.css  style.css  translation.rs  utils.ts
srs/src-tauri/: Cargo.toml  tauri.conf.json
srs/src-tauri/capabilities/: default.json
srs/src-tauri/src/: lib.rs
srs/src/word_box/: mod.rs
xpub/: .gitignore  Cargo.toml
xpub/src/: html_parser.rs  main.rs
