[package]
name = "srs"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
gio = "0.20.4"
glib = "0.20.4"
gtk = { version = "0.9.2", package = "gtk4", features = ["v4_14"] }
rand = "0.8.5"
serde_json = "1.0.128"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anthropic = "0.0.8"

